--- a/app/views/refinery/inquiries/admin/inquiries/_inquiry.html.erb
+++ b/app/views/refinery/inquiries/admin/inquiries/_inquiry.html.erb
@@ -7,7 +7,7 @@
       <span class="preview"><%= truncate(strip_tags(sanitize(inquiry.message)), :length => 60) -%></span>
     </a>
 
-    <span class='actions'>
+    <span class='actions actions-col-2'>
 
       <span class="delete">                  
         <%= link_to '<i class="gcicon gcicon-trash"></i>'.html_safe, 
