--- a/app/views/refinery/admin/pages/_page.html.erb
+++ b/app/views/refinery/admin/pages/_page.html.erb
@@ -49,7 +49,7 @@
       Jan 25, 2014
     </span>
     
-    <span class='actions'>                 
+    <span class='actions actions-col-2'>                 
       <span class="add-child">           
         <%= link_to '<i class="gcicon gcicon-add"></i>'.html_safe,
                   refinery.new_admin_page_path(:parent_id => page.id),
