--- a/app/views/refinery/admin/users/_user.html.erb
+++ b/app/views/refinery/admin/users/_user.html.erb
@@ -2,7 +2,7 @@
   <div class="page-row">
     <i class="gcicon gcicon-file"></i>
     <%= link_to user.username, current_refinery_user.can_edit?(user) ? refinery.edit_admin_user_path(user) : '#', :class => 'page-title' %>
-    <span class='actions'>
+    <span class='actions actions-col-2'>
       <span class="delete">                  
         <%= link_to '<i class="gcicon gcicon-trash"></i>'.html_safe, refinery.admin_user_path(user),
           :class => "cancel confirm-delete circle-icon",
