--- a/app/assets/stylesheets/glass/_base.scss
+++ b/app/assets/stylesheets/glass/_base.scss
@@ -156,18 +156,16 @@ body{
       color: $primary-fade;
     }
   }
+  &-left{
+    left: 10px;
+  }
+  &-right{
+    right: 10px;
+  }
   .gcicon{
     color: $white;
     font-size: 24px;
   }
-}
-
-.menu-link-left{
-  left: 10px;
-}
-
-.menu-link-right{
-  right: 10px;
 }
 
 #wrapper{
@@ -400,6 +398,24 @@ body{
         .actions{
           text-align: right;
           display: none;
+          &-col-0{
+            width: 0;
+          }
+          &-col-1{
+            width: 40px;
+          }
+          &-col-2{
+            width: 80px;
+          }
+          &-col-3{
+            width: 120px;
+          }
+          &-col-4{
+            width: 160px;
+          }
+          &-col-5{
+            width: 200px;
+          }
           .circle-icon{
             color: $white;
             border-color: $white;
@@ -418,24 +434,6 @@ body{
             display: inline-block;
             margin-left: 5px;
           }
-        }
-        .actions-col-0{
-          width: 0;
-        }
-        .actions-col-1{
-          width: 40px;
-        }
-        .actions-col-2{
-          width: 80px;
-        }
-        .actions-col-3{
-          width: 120px;
-        }
-        .actions-col-4{
-          width: 160px;
-        }
-        .actions-col-5{
-          width: 200px;
         }
       }
     }
