--- a/app/assets/stylesheets/glass/_icons.scss
+++ b/app/assets/stylesheets/glass/_icons.scss
@@ -100,7 +100,7 @@
 .gcicon-publish:before {
   content: "H";
 }
-.gcicon-draft:before {
+.gcicon-pencil:before {
   content: "I";
 }
 .gcicon-lock:before {
