--- a/app/views/refinery/admin/users/index.html.erb
+++ b/app/views/refinery/admin/users/index.html.erb
@@ -10,7 +10,7 @@
           </a>
         </div>
       </div>
-      <div class="col-sm-12">
+      <div class="col-sm-12 index-listing">
         <%= render 'records' %>
       </div>
     </div>
