--- a/app/assets/stylesheets/glass/_base.scss
+++ b/app/assets/stylesheets/glass/_base.scss
@@ -395,7 +395,15 @@ body{
         .actions{
           text-align: right;
           display: none;
-          width: 150px;
+          &.actions-1 {
+            width: 50px;
+          }
+          &.actions-2 {
+            width: 100px;
+          }
+          &.actions-3 {
+            width: 150px;
+          }
           .circle-icon{
             color: $white;
             border-color: $white;
