--- a/app/views/refinery/_javascripts.html.erb
+++ b/app/views/refinery/_javascripts.html.erb
@@ -1,17 +1,16 @@
-<% if defined? admin && admin %>
+<% if defined?(admin) && admin %>
   <!-- WAS views/refinery/admin/_javascripts -->
   <script type="text/javascript" >
     var refinery = window.refinery || {};
     refinery.current_admin_locale = '<%= current_admin_locale %>';
   </script>
-  <%= javascript_include_tag 'admin' -%>
-  <%= javascript_include_tag 'refinery/refinery' -%>
-  <%= javascript_include_tag 'refinery/wymeditor', "wymeditor/lang/#{current_admin_locale}", "wymeditor/skins/refinery/skin" %>
+
+  <%= javascript_include_tag 'refinery-glass' -%>
+
   <%= yield :after_javascript_libraries -%>
   <% custom_javascripts.each do |js| %>
     <%= javascript_include_tag js %>
   <% end %>
-  <%#= yield :javascripts %>
 
   <% if controller.class.respond_to?(:xhr_pageable?) && !controller.class.xhr_pageable? %>
     <script>
@@ -22,10 +21,10 @@
   <% end %>
   <!-- WAS views/refinery/admin/_javascripts -->
 
+<% elsif current_refinery_user.present? %>
+  <%= javascript_include_tag 'kitchen-sink' %>
 <% else %>
-  <%# this application-base is all duplicate js in admin & frontend views %>
-  <%# See refinery-glass/app/views/layouts/refinery/admin.html.erb for full structure %>
-  <%= javascript_include_tag 'application-base' %>
+  <%= javascript_include_tag 'site' %>
 <% end %>
 
 <!-- WAS entire views/refinery/_javascripts -->
@@ -44,6 +43,5 @@
   <% content_for :javascripts, yield(:after_javascript_libraries) %>
 <% end %>
 
-<%= javascript_include_tag 'application' %>
 <%= yield :javascripts -%>
 <!-- WAS entire views/refinery/_javascripts -->
