Restructure partials: head, body, stylesheets, javascripts

--- a/app/views/glass/_stylesheets.html.erb
+++ b/app/views/glass/_stylesheets.html.erb
@@ -1,4 +1,6 @@
-<% if defined?(admin) && admin %>
+<% admin = false unless defined?(admin) %>
+
+<% if admin %>
   <%= stylesheet_link_tag "refinery-glass" %>
   <%#= stylesheet_link_tag 'refinery/refinery' %>
   <% custom_stylesheets.each do |css| %>
