--- a/app/views/glass/_body.html.erb
+++ b/app/views/glass/_body.html.erb
@@ -1,10 +1,16 @@
+<% admin = false unless defined?(admin) %>
+
 <div id="page_container">
   <header id="header">
     <%= render '/refinery/header' -%>
   </header>
   <section id="page">
     <%# See refinery-glass/app/views/layouts/refinery/admin.html.erb for full structure %>
-    <%= content_for?(:admin_page_preview) ? yield(:admin_page_preview) : yield %>
+    <% if admin %>
+      <%= content_for?(:admin_page_preview) ? yield(:admin_page_preview) : yield %>
+    <% else %>
+      <%= yield %>
+    <% end %>
   </section>
   <footer>
     <%= render '/refinery/footer' -%>
