--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <%= render '/refinery/html_tag' %>
   <head>
-    <%= render "/refinery/head" %>
-    <%= render partial: '/refinery/stylesheets' %>
+    <%= render partial: '/glass/head',        locals: {admin: false} %>
+    <%= render partial: '/glass/stylesheets', locals: {admin: false} %>
   </head>
   <body>
-    <%= render "/refinery/body" %>
-    <%= render partial: '/refinery/javascripts' %>
+    <%= render partial: '/glass/body',        locals: {admin: false} %>
+    <%= render partial: '/glass/javascripts', locals: {admin: false} %>
   </body>
 </html>
