Update login layout with new _head partial

--- a/app/views/refinery/layouts/login.html.erb
+++ b/app/views/refinery/layouts/login.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <%= render '/refinery/html_tag' %>
   <head>
-    <%= render '/refinery/admin/head' %>
-    <%= render partial: '/refinery/stylesheets', locals: {admin: true} %>
+    <%= render partial: '/glass/head',        locals: {admin: true} %>
+    <%= render partial: '/glass/stylesheets', locals: {admin: true} %>
   </head>
   <body class='login <%= I18n.locale %>'>
     <div class="container">
