--- a/app/views/glass/_head.html.erb
+++ b/app/views/glass/_head.html.erb
@@ -8,7 +8,7 @@
   <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
   <title><%= browser_title(yield(:title)) %></title>
   <%= raw %(<meta name="description" content="#{@meta.meta_description}" />) if @meta.meta_description.present? -%>
-  <%= raw %(<link rel="canonical" content="#{@canonical}" />) if @canonical.present? -%>
+  <%= raw %(<link rel="canonical" href="#{@canonical}" />) if @canonical.present? -%>
   <%= csrf_meta_tags if Refinery::Core.authenticity_token_on_frontend -%>
   <%= render '/refinery/google_analytics' %>
 
