--- a/app/views/refinery/acts_as_indexed/admin/_search.html.erb
+++ b/app/views/refinery/acts_as_indexed/admin/_search.html.erb
@@ -8,8 +8,10 @@
       <%= hidden_field :wymeditor, nil, :name => 'wymeditor', :id => nil, :value => true  if params[:wymeditor].presence %>
       <%= hidden_field :dialog, nil, :name => 'dialog', :id => nil, :value => true if from_dialog? %>
       <%= hidden_field :callback, nil, :name => 'callback', :id => nil, :value => @callback if @callback.presence %>
-      <span class="input-group-btn">
-        <button class="btn btn-default" type="submit"><i class="gcicon gcicon-search"></i><div class="ui active inline loader xs hidden"></div></button>
+      <span id="refinery-search-btn" class="input-group-btn">
+        <button class="btn btn-default" type="submit"><i class="gcicon gcicon-search"></i>
+          <div class="ui active inline loader xs hidden"></div>
+        </button>
       </span>
     </div><!-- /input-group -->
   </form>
