--- a/app/assets/stylesheets/glass/partials/components/_icons.scss
+++ b/app/assets/stylesheets/glass/partials/components/_icons.scss
@@ -127,10 +127,10 @@
 .gcicon-sort-alpha:before {
   content: "Q";
 }
-.gcicon-sort:before {
+.gcicon-sort-amount:before {
   content: "R";
 }
-.gcicon-sort-two:before {
+.gcicon-sort-amount-two:before {
   content: "S";
 }
 .gcicon-sort-numeric-two:before {
@@ -150,4 +150,58 @@
 }
 .gcicon-filter:before {
   content: "Y";
+}
+.gcicon-close:before {
+  content: "Z";
+}
+.gcicon-dashboard:before {
+  content: "0";
+}
+.gcicon-files:before {
+  content: "1";
+}
+.gcicon-user:before {
+  content: "2";
+}
+.gcicon-calendar:before {
+  content: "5";
+}
+.gcicon-projection-screen:before {
+  content: "7";
+}
+.gcicon-wrench:before {
+  content: "8";
+}
+.gcicon-sliders:before {
+  content: "9";
+}
+.gcicon-pages:before {
+  content: "!";
+}
+.gcicon-paperclip:before {
+  content: "\"";
+}
+.gcicon-crop:before {
+  content: "%";
+}
+.gcicon-flag:before {
+  content: "&";
+}
+.gcicon-chat:before {
+  content: "$";
+}
+.gcicon-fullscreen:before {
+  content: "'";
+}
+.gcicon-feather:before {
+  content: "6";
+}
+.gcicon-group:before {
+  content: "#";
+}
+.gcicon-user-1:before {
+  content: "(";
+}
+.gcicon-glass-canvas:before {
+  content: "3";
 }
