--- a/app/views/layouts/refinery/admin.html.erb
+++ b/app/views/layouts/refinery/admin.html.erb
@@ -41,9 +41,9 @@ html
   </head>
 
   <body class="<%= action_name %> <%= I18n.locale %>">
-    <section id="sidebar-left" class="ui sidebar overlay">
+    <section id="sidebar-left" class="ui sidebar overlay small">
       <div class="sidebar-top-nav site-name">
-        <a href="" class="sidebar-left-opener menu-link menu-link-left"><i class="gcicon gcicon-cancel"></i></a> <%= link_to Refinery::Core.site_name, '/' %>
+        <a href="" class="sidebar-left-opener menu-link menu-link-left"><i class="gcicon gcicon-cancel"></i></a> <i class="gcicon gcicon-glass-canvas hidden"></i> <%= link_to Refinery::Core.site_name, '/' %>
       </div>
       <div id="sidebar-left-inner">
         <%= render 'refinery/admin/menu' %>
