Edit article HTML (basic editing)
 - Bring in all JS & html snippets into common files
 - Comment out the refinery wysiwyg html (duplicate JS issues happening)

--- a/app/assets/stylesheets/glass/partials/layout/_editor.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_editor.scss
@@ -4,6 +4,11 @@
  white-space: pre-wrap; 
 }
 
+[contenteditable=true]:empty:before{
+  content: attr(placeholder);
+  display: block; /* For Firefox */
+}
+
 .input-group{
   .input-group-addon{
     background: $off-white;
