--- a/app/views/glass/_javascripts.html.erb
+++ b/app/views/glass/_javascripts.html.erb
@@ -9,10 +9,10 @@
 
   <%= javascript_include_tag 'refinery-glass' -%>
 
-  <!-- TODO: remove these soon -->
-  <%= javascript_include_tag 'admin' -%>
-  <%= javascript_include_tag 'refinery/refinery' -%>
-  <%= javascript_include_tag 'refinery/wymeditor', "wymeditor/lang/en", "wymeditor/skins/refinery/skin" %>
+  <!-- TODO: these are needed to make WYMEDITOR to work.  But cause dup js (jquery) so break other JS.  Just remove them for good soon -->
+  <%#= javascript_include_tag 'admin' -%>
+  <%#= javascript_include_tag 'refinery/refinery' -%>
+  <%#= javascript_include_tag 'refinery/wymeditor', "wymeditor/lang/en", "wymeditor/skins/refinery/skin" %>
 
   <%= yield :after_javascript_libraries -%>
   <% custom_javascripts.each do |js| %>
