--- a/app/views/refinery/admin/pages/edit.html.erb
+++ b/app/views/refinery/admin/pages/edit.html.erb
@@ -1,5 +1,6 @@
 <% content_for :admin_sidebar do %>
   <%= render 'form' %>
+  <%= render partial: '/glass/html_editing_assets' %>
 <% end %>
 
 <% content_for :admin_page_preview do %>
