--- a/app/views/glass/_page_content.html.erb
+++ b/app/views/glass/_page_content.html.erb
@@ -1,3 +1,4 @@
 <div class="glass-edit" data-glass-options='{"form_id": "page_parts_attributes_0_body", "type": "html"}'>
-  <%= raw @page.content_for(:body) %>
+  <% body = @page.content_for(:body) %>
+  <%= raw body.blank? ? '<div id="glass-blank-module-hook"></div>' : body %>
 </div>
