--- a/app/views/refinery/admin/pages/_form.html.erb
+++ b/app/views/refinery/admin/pages/_form.html.erb
@@ -34,6 +34,8 @@
              :cancel_url => refinery.admin_pages_path %>
 
   <%= render 'form_new_page_parts', :f => f if Refinery::Pages.new_page_parts %>
+
+  <%= render partial: '/glass/html_editing_assets' %>
 <% end %>
 
 <% content_for :javascripts do %>
