--- a/app/views/refinery/admin/users/_user.html.erb
+++ b/app/views/refinery/admin/users/_user.html.erb
@@ -1,7 +1,14 @@
 <li class='page-listing' id="<%= dom_id(user) -%>">
   <div class="page-row">
     <i class="gcicon gcicon-file"></i>
-    <%= link_to user.username, current_refinery_user.can_edit?(user) ? refinery.edit_admin_user_path(user) : '#', :class => 'page-title' %>
+    <a href="<%= current_refinery_user.can_edit?(user) ? refinery.edit_admin_user_path(user) : '#' %>" class="page-title">
+      <span class='title'>
+        <%= user.username %>
+        <% if user.confirmation_token.present? && !user.confirmed_at.present? %>
+          <span class="label">Invitation Sent</span>
+        <% end %>
+      </span>
+    </a>
     <span class='actions actions-col-2'>
       <span class="delete">                  
         <%= link_to '<i class="gcicon gcicon-trash"></i>'.html_safe, refinery.admin_user_path(user),
