--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -41,46 +41,6 @@ button{
 	}
 }
 
-* {
-  background-repeat: no-repeat;
-  position: relative;
-  vertical-align: middle;
-}
-
-*::selection {
-	background: $primary-light; /* Safari */
-	color: $white;
-}
-
-p::-moz-selection {
-	background: $primary-light; /* Firefox */
-	color: $white;
-}
-
-.block{
-  display: block;
-}
-
-.margin-bottom-xs{
-  margin-bottom: $margin-half;
-}
-
-.margin-bottom-sm{
-  margin-bottom: $margin;
-}
-
-.margin-bottom-md{
-  margin-bottom: $margin * 1.5;
-}
-
-.margin-bottom{
-  margin-bottom: $margin-double;
-}
-
-.margin-bottom-lg{
-  margin-bottom: $margin * 3;
-}
-
 .bump-up{
   top: -1px;
 }
@@ -105,6 +65,10 @@ p::-moz-selection {
   left: -1px;
 }
 
+
+
+/* -------------------- LAYOUT -------------------- */
+
 .clear:before, .clear:after {
     content: " ";
     display: table;
@@ -120,6 +84,83 @@ p::-moz-selection {
     flex: 1;
   }
 }
+
+.flex{
+  display: flex;
+}
+
+.align-items-center{
+  align-items: center;
+}
+
+.block{
+  display: block;
+}
+
+* {
+  background-repeat: no-repeat;
+  position: relative;
+  vertical-align: middle;
+}
+
+*::selection {
+	background: $primary-light; /* Safari */
+	color: $white;
+}
+
+p::-moz-selection {
+	background: $primary-light; /* Firefox */
+	color: $white;
+}
+
+.margin-bottom-xs{
+  margin-bottom: $margin-half;
+}
+
+.margin-bottom-sm{
+  margin-bottom: $margin;
+}
+
+.margin-bottom-md{
+  margin-bottom: $margin * 1.5;
+}
+
+.margin-bottom{
+  margin-bottom: $margin-double;
+}
+
+.margin-bottom-lg{
+  margin-bottom: $margin * 3;
+}
+
+
+.flip-wrapper{
+  &:hover{
+    .flip-front{
+      transform: rotateY(180deg);
+    }
+    .flip-back{
+      transform: rotateY(360deg);
+    }
+  }
+  .flip{
+    position: absolute;
+    backface-visibility: hidden;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: 0.5s ease-out;
+    &-front{
+      z-index: 10;
+    }
+    &-back{
+    -webkit-transform: rotateY(180deg);
+    }
+  }
+}
+
+
 
 
 /* -------------------- ELEMENTS -------------------- */
