page displays correct created_at date

--- a/app/views/refinery/admin/pages/_page.html.erb
+++ b/app/views/refinery/admin/pages/_page.html.erb
@@ -46,7 +46,8 @@
     -->
     
     <span class="date">
-      Jan 25, 2014
+      <!--Jan 25, 2014-->
+      <%= page.created_at.strftime("%b %d, %Y") %>
     </span>
     
     <span class='actions actions-col-2'>                 
