--- a/app/views/layouts/refinery/admin.html.erb
+++ b/app/views/layouts/refinery/admin.html.erb
@@ -40,8 +40,8 @@ html
     <%= render partial: '/glass/stylesheets', locals: {admin: true} %>
   </head>
 
-  <body class="<%= action_name %> <%= I18n.locale %>">
-    <section id="sidebar-left" class="ui sidebar overlay small">
+  <body class="<%= action_name %> <%= I18n.locale %> small-sidebar">
+    <section id="sidebar-left" class="ui sidebar overlay">
       <div class="sidebar-top-nav site-name">
         <a href="" class="sidebar-left-opener menu-link menu-link-left"><i class="gcicon gcicon-cancel"></i></a> <i class="gcicon gcicon-glass-canvas hidden"></i> <%= link_to Refinery::Core.site_name, '/' %>
       </div>
@@ -70,8 +70,12 @@ html
       <% end %>
       
       <div id="flash_container" class="container-fluid">
-        <%= render '/refinery/no_script' %>
-        <%= render '/refinery/message' %>
+        <div class="row">
+          <div class="col-sm-12">
+            <%= render '/refinery/no_script' %>
+            <%= render '/refinery/message' %>
+          </div>
+        </div>
       </div>
 
       <% if content_for?(:admin_page_preview) %>
