--- a/app/views/refinery/pages/partials/_show.html.erb
+++ b/app/views/refinery/pages/partials/_show.html.erb
@@ -3,8 +3,8 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <h1><%= @page.title %></h1>
-          <%= render '/refinery/content_page', { :hide_sections => [:body_content_title] } %>
+          <h1 class="glass-edit" data-glass-options='{"form_id": "page_title"}' placeholder="Title"><%= @page.title %></h1>
+          <%= render partial: '/glass/page_content' %>
           <%= yield :extra_page_content %>
         </div>
       </div>
