--- a/app/views/glass/_page_content.html.erb
+++ b/app/views/glass/_page_content.html.erb
@@ -1,4 +1,4 @@
 <div class="glass-edit" data-glass-options='{"form_id": "page_parts_attributes_0_body", "type": "html"}'>
   <% body = @page.content_for(:body) %>
-  <%= raw body.blank? ? '<p placeholder="New Paragraph..."></p>' : body %>
+  <%= raw body.blank? ? '<p placeholder="New paragraph..."></p>' : body %>
 </div>
