Refactor page_content partial

--- a/app/assets/stylesheets/glass/partials/layout/_editor.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_editor.scss
@@ -5,7 +5,7 @@
 }
 
 [contenteditable=true]:empty:before{
-  content: attr(placeholder);
+  content: attr(glass-placeholder);
   display: block; /* For Firefox */
   color: $grey-5;
 }
