--- a/app/views/glass/_page_content.html.erb
+++ b/app/views/glass/_page_content.html.erb
@@ -1,15 +1,23 @@
 <%
-  parts_hash = {
-    '1' => [0, :body],
-    '2' => [1, :body2],
-    '3' => [2, :body3],
-  }
-
   if !defined?(part_num)
-    part_num = '1'
+    part_num = 0
   end
+
+  if !defined?(content_type)
+    content_type = 'html'
+  end
+
+  if !defined?(html_tag)
+    html_tag = content_type == 'html' ? 'div' : 'span'
+  end
+
+  default_content   = content_type == 'html' ? '<p glass-placeholder="New paragraph..."></p>' : ''
 %>
-<div class="glass-edit" data-glass-options='{"form_id": "page_parts_attributes_<%= parts_hash[part_num][0].to_s %>_body", "type": "html"}'>
-  <% content = @page.content_for(parts_hash[part_num][1]) %>
-  <%= raw content.blank? ? '<p placeholder="New paragraph..."></p>' : content %>
-</div>
+
+<% content = @page.content_for("content#{part_num}".to_sym) %>
+<<%= html_tag %>
+  class="glass-edit" glass-placeholder="Title"
+  data-glass-options='{"form_id": "page_parts_attributes_<%= part_num %>_body", "type": "<%= content_type %>"}'
+><%=
+  raw content.blank? ? default_content : content
+%></<%= html_tag %>>
