--- a/app/views/refinery/admin/pages/edit.html.erb
+++ b/app/views/refinery/admin/pages/edit.html.erb
@@ -3,5 +3,9 @@
 <% end %>
 
 <% content_for :admin_page_preview do %>
-  <%= render '/refinery/pages/partials/show' %>
+  <%
+    render_options = {}
+    render_options[:template] = "refinery/pages/#{@page.view_template.presence || (@page.link_url == '/' ? 'home' : 'show')}"
+  %>
+  <%= render render_options %>
 <% end %>
