--- a/app/views/glass/_page_content.html.erb
+++ b/app/views/glass/_page_content.html.erb
@@ -17,7 +17,7 @@
 <% content = @page.content_for("content#{part_num}".to_sym) %>
 <<%= html_tag %>
   class="glass-edit" glass-placeholder="Title"
-  data-glass-options='{"form_id": "page_parts_attributes_<%= part_num %>_body", "type": "<%= content_type %>"}'
+  data-glass-options='{"form_id": "page_part_content<%= part_num %>_body", "type": "<%= content_type %>"}'
 ><%=
   raw content.blank? ? default_content : content
 %></<%= html_tag %>>
