--- a/app/assets/stylesheets/canvas/config/_base-variables.scss
+++ b/app/assets/stylesheets/canvas/config/_base-variables.scss
@@ -219,10 +219,9 @@ $icon-li-width: (30em / 14) !default;
   background-color: $grey-9 !important;
 }
 
-.beige{
+.beige-bg{
   background-color: $beige !important;
 }
-
 
 .red-bg{
   background-color: $red !important;
